# SoftRenderer

./: .gitignore  CMakeLists.txt  README.md
examples/01_PureColor/: CMakeLists.txt  main.cpp
examples/02_UV/: CMakeLists.txt  main.cpp
examples/03_Phong/: CMakeLists.txt  main.cpp
examples/04_Texture/: CMakeLists.txt  main.cpp
examples/05_BumpedNormal/: CMakeLists.txt  main.cpp
examples/06_ShadowMap/: CMakeLists.txt  main.cpp
examples/07_Bloom/: CMakeLists.txt  main.cpp
examples/08_PointLight/: CMakeLists.txt  main.cpp
examples/09_SpotLight/: CMakeLists.txt  main.cpp
examples/10_MultiLight/: CMakeLists.txt  main.cpp
examples/11_Transparent/: CMakeLists.txt  main.cpp
examples/12_AmbientOcclusion/: CMakeLists.txt  main.cpp
examples/13_GeneralScene/: CMakeLists.txt  main.cpp
include/: Light.h  SRApp.h  SRMesh.h  SRScene.h  Texture.h  geometry.h  model.h  our_gl.h  pipeline.h  shader.h  veccolor.h
src/: Light.cpp  SRApp.cpp  SRMesh.cpp  SRScene.cpp  Texture.cpp  VecColor.cpp  main.cpp  model.cpp  our_gl.cpp  pipeline.cpp  shader.cpp
